Bug 147404 - GetAutoFillPreview doesn't take into account hidden columns or rows
Summary: GetAutoFillPreview doesn't take into account hidden columns or rows
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6 all versions
Hardware: All All
: low minor
Assignee: Justin L
URL:
Whiteboard: target:7.4.0
Keywords: bibisected
Depends on:
Blocks:
 
Reported: 2022-02-14 08:55 UTC by Justin L
Modified: 2022-02-25 19:19 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2022-02-14 08:55:40 UTC
A user can drag-expand a cell and have the data auto-fill, typically with an incremental value. Hidden/filtered cells are skipped in this process since LO 3.6 via commits in the range
https://cgit.freedesktop.org/libreoffice/core/log/?id=7a64988dbc7a1542aa38f0e8f9a8a47941fbc67d&qt=range&q=ee7084c4f720c932df67c8ff033dab4d8d556179..250feedd8e50e5eb52682a194823567ba5287c60

However, the AutoFillPreview doesn't take into account the hidden columns, and so it displays the wrong value while the drag-selection is progressing. One commit in the range looks like it was started to be worked on, but apparently never finished or followed up on.
https://cgit.freedesktop.org/libreoffice/core/commit/?id=73ff3a49a0891c7787f08eec86357c320a76c263
    	first part for ScTable::GetAutoFillPreview
Comment 1 Commit Notification 2022-02-25 17:47:47 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9cd4da63b6ed19b71a2475fccb4ab135f0a87873

tdf#147404 sc AutoFillPreview: consider hidden cells

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.