tdf#147404 sc AutoFillPreview: consider hidden cells

Back in the days before LO 3.6, only filtered cells
were skipped by autoFill. But when hidden cells were
also skipped, the preview function wasn't updated to look
for hidden cells instead of filtered cells.
(I said "instead" because filtered cells are also
considered to be hidden, so it encompasses both cases.)

Change-Id: I38b230361f0f0f1722873bbdd2c870d55b77bd06
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/129912
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>